# manage-elector-data

./: .flake8  .gitignore  README.md  pyproject.toml  update_register.py
enfield/: update_voting_record.py
tests/: test_combined_data.xlsx  test_council_data.py  test_council_data.xlsx  test_gp_data.py  test_gp_data.xlsx  test_incremental_data.csv  test_match.py  test_updated_data.xlsx
towerhamlets/: __init__.py  apply_postal_votes.py  council.py  incremental_update.py  match.py  source.py
